zero-schema-macros/tests/ui/fail/59_optional_zero_valid_record.rs
use zero_schema_macros::zero;

#[zero]
struct ZeroValidRecord {
    count: u8,
    enabled: bool,
}

#[zero]
struct Invalid {
    value: Option<ZeroValidRecord>,
}

fn main() {}
